deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec: # <-- Correto: alinhado com metadata
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
