teste.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: pod-nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
