nginx-ingress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP   # Mudamos de NodePort para ClusterIP (Apenas rede interna)
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx   # Avisa que o Ingress Controller do NGINX vai cuidar dessa regra
  rules:
  - host: meu-nginx.local    # O domínio que você vai acessar no navegador
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service # Nome EXATO do Service acima
            port:
              number: 80       # Porta do Service
